@@ -12,6 +12,7 @@
 #  windowresolution: Scale the window to this size IF the output device supports hardware scaling.
 #                        (output=surface does not!)
 #    windowposition: Set the window position at startup in the positionX,positionY format (e.g.: 1300,200)
+#           display: Specify a screen/display number to use for a multi-screen setup (0 = default).
 #            output: What video system to use for output.
 #                      Possible values: default, surface, overlay, opengl, openglnb, openglhq, ddraw, ttf.
 #          autolock: Mouse will automatically lock, if you click on the screen. (Press CTRL-F10 to unlock)
@@ -52,6 +53,7 @@ fulldouble        = false
 fullresolution    = desktop
 windowresolution  = original
 windowposition    = 
+display           = 0
 output            = default
 autolock          = false
 clip_mouse_button = right
